Splited Utils/OS class in file system, operating system and stream utilities classes
git-svn-id: http://jira.uji.es/repos/uji/CRYPTOAPPLET/trunk@6927 e6edf6fb-f266-4316-afb4-e53d95876a76